# ChangeLog for dev-cpp/libgtksourceviewmm
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libgtksourceviewmm/Attic/ChangeLog,v 1.7 2007/07/10 19:17:24 jer Exp $

  10 Jul 2007; Jeroen Roovers <jer@gentoo.org>
  libgtksourceviewmm-0.3.1.ebuild:
  Marked ~hppa too (dev-util/nemiver).

*libgtksourceviewmm-0.3.1 (10 Jun 2007)

  10 Jun 2007; Remi Cardona <remi@gentoo.org>
  +libgtksourceviewmm-0.3.1.ebuild:
  bump to 0.3.1

  13 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  add <herd>no-herd</herd>

*libgtksourceviewmm-0.3.0-r1 (06 Feb 2007)

  06 Feb 2007; Remi Cardona <remi@gentoo.org>
  +libgtksourceviewmm-0.3.0-r1.ebuild:
  fixing configure option for doxygen dep, fixes bug #164327

*libgtksourceviewmm-0.3.0 (21 Jan 2007)

  21 Jan 2007; Remi Cardona <remi@gentoo.org>
  +libgtksourceviewmm-0.3.0.ebuild:
  bumping libgtksourceviewmm to 0.3.0

  20 Dec 2006; Daniel Gryniewicz <dang@gentoo.org>
  libgtksourceviewmm-0.2.0.ebuild:
  Keyword ~amd64

*libgtksourceviewmm-0.2.0 (17 Dec 2006)

  17 Dec 2006; Remi <remi@gentoo.org> +metadata.xml,
  +libgtksourceviewmm-0.2.0.ebuild:
  adding libgtksourceviewmm-0.2.0 (see bug #153958)
