@@ -1,3 +1,0 @@
-MD5 cf035031aeeaa3437ce814efa92a3bd6 libgtksourceviewmm-0.2.0.tar.bz2 270578
-RMD160 b9ca859028c6ca47219f666d5dfe34239714d28b libgtksourceviewmm-0.2.0.tar.bz2 270578
-SHA256 706c1831847fe619c67ebc2b71586923e89b11692ecf821c0339276744edeb2f libgtksourceviewmm-0.2.0.tar.bz2 270578
