@@ -1,3 +1,0 @@
-MD5 9f5a6bd4f523a7dc0f6256122e48848d libgtksourceviewmm-0.3.0.tar.bz2 291443
-RMD160 58d0c20b94ab4b4c2e4191e08ace30f6d8d5cf4d libgtksourceviewmm-0.3.0.tar.bz2 291443
-SHA256 e5a79da8899ff8caedcb191d1f140e85e9dc807ec7b2b1c4e9ab96d29fb6bc6a libgtksourceviewmm-0.3.0.tar.bz2 291443
