@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libgtksourceviewmm/Attic/libgtksourceviewmm-0.3.1.ebuild,v 1.2 2007/07/10 19:17:24 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libgtksourceviewmm/Attic/libgtksourceviewmm-0.3.1.ebuild,v 1.3 2007/10/10 16:05:21 remi Exp $
 
 inherit gnome2
 
@@ -13,7 +13,7 @@ SLOT="0"
 LICENSE="LGPL-2"
 
 RDEPEND=">=dev-cpp/gtkmm-2.4
-	>=x11-libs/gtksourceview-1.2.0"
+	=x11-libs/gtksourceview-1*"
 
 DEPEND="${RDEPEND}
 	dev-util/pkgconfig
